links fixed and spacing of titles

--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,6 @@
 @yellowOne: #FCE17A;
 @yellowTwo: #FDE688;
-@lightYellow: #FFE589; 
+@lightYellow: #FFE589;
 @purple: #FF70C3;
 @white: #FFFFFF;
 
@@ -279,7 +279,11 @@ section#menu{
 div.signup{
 	text-shadow: 1px 1px 8px #000;
 	text-align: center;
-	margin: 20px 0;
+	margin: 20px 0px;
+
+	h3{
+		margin-top: 5px;
+	}
 }
 
 div.img-bar{
